# bot-translator

./: .gitignore  Dockerfile  bot-translator.db  pyproject.toml  requirements.txt
bot/: buttons.py  commands.py  config.py  dict_api.py  dispatcher.py  run_bot.py  run_polling.py  utils.py
